# CayleyTableGeneration

./: .gitignore  CayleyAgent-(old).py  CayleyTable-(old).py  CayleyTable-(old-12.01.2023).py  CayleyTable-(old-13.01.2023).py  CayleyTable.py  CayleyTableProperties-(old).py  CayleyTableProperties.py  CayleyTable_properties.py  OLD_cayley_table_generation.py  OLD_cayley_table_properties.py  To do  Todo.md  cayley_table.py  cayley_table_equivalences.py  cayley_table_generation.py  cayley_table_properties.py  cayley_table_states.py  cayley_table_tests.py  equiv_classes.py  equivalence_classes-(old).py  equivalence_classes.py  gridworld2D.py  hello.py  identity_checker-(function_in_agent)-(old).py  identity_checker-(function_in_agent).py  inverse_checker-(old).py  inverse_checker_old.py  launch_graphworld1.py  launch_gridworld2D.py  launch_gridworld2d_block.py  launch_gridworld2d_consumables.py  launch_gridworld2d_walls.py  main.py  main_script_for_generating_cayley_tables.py  might_use.py  minimum_action_order_checker-(old)-(old).py  minimum_action_order_checker-(old).py  minimum_action_order_checker.py  old-parallelisation-functions.py  (+12 more)
Cayley_Table_Properties/: check_associativity.py  check_commutativity.py  check_identity.py  check_inverse.py  find_element_order.py
Environments/: block_gridworld.py  grid.py  gridworld.py  gridworld2D-new.py  gridworld2D.py  gridworld2DRestrictedWalls.py  gridworld2D_walls.py  gridworld2d_block.py  gridworld2d_consumable.py  gridworld2d_walls.py  gridworld_plotting.py
LocalAlgebraAlgo/: generate_local_algebra.py  local_cayley_generator.py  local_equiv_classes_generator.py
NewAlgo/: actions_to_action_functions_map.py  generate_algebra_new_method.py  new_actions_cayley_generator.py  new_equiv_classes_generator.py
(+181 files in other folders)
