[project]
name = "cayleytablegeneration-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.8.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

# Same as Black.
line-length = 88

# Assume Python 3.13 since that's what your project requires
target-version = "py313"

# Enable all rules by default
select = ["E", "F", "W", "I", "N", "UP", "PL", "RUF"]
