[project]
name = "cayleytablegeneration-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.5",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "ruff",
    "pygraphviz>=1.14",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "worlds",
    "worlds.gridworlds2d",
    "CayleyStatesAlgo",
    "CayleyStatesAlgo.generation",
    "CayleyStatesAlgo.scripts",
    "LocalAlgebraAlgo",
    "ActionFunctionsAlgo",
    "ActionFunctionsAlgo.generation",
    "ActionFunctionsAlgo.scripts",
    "transformation_algebra",
    "transformation_algebra.property_checkers",
    "utils"
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

# Same as Black.
line-length = 88

# Assume Python 3.13 since that's what your project requires
target-version = "py313"

# Enable all rules by default
select = ["E", "F", "W", "I", "N", "UP", "PL", "RUF"]
